Update 'python-lxdnahcy' component image to: quay.io/sjmrhtap/python-lxdnahcy:9da47302a7ad4807e61e21e5bc7705c827818182@sha256:8711c141a412e57368a5437573fe65820f0adb4f0e18e1cf76924766a92452da

--- a/components/python-lxdnahcy/overlays/development/deployment-patch.yaml
+++ b/components/python-lxdnahcy/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: python-lxdnahcy
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/sjmrhtap/python-lxdnahcy:9da47302a7ad4807e61e21e5bc7705c827818182@sha256:8711c141a412e57368a5437573fe65820f0adb4f0e18e1cf76924766a92452da
+          name: container-image
